# clube-dos-tampinha

./: .gitignore  README.md  app.py  auth.py  const.py  errors.py  models.py  pages_admin_en.toml  pages_admin_pt_br.toml  pages_init.toml  pages_parent_en.toml  pages_parent_pt_br.toml  pages_teacher_en.toml  pages_teacher_pt_br.toml  pyproject.toml  requirements.txt  todo.md  translations.json  welcome.py
db/: activity.py  authorization.py  communication.py  parent.py  payment.py  session.py  student.py  teacher.py  user.py  utils.py
p/: auth.py  finish_register.py  welcome.py
p/admin/: activity.py  authorization.py  communication.py  payment.py  user.py
p/parent/: activity.py  authorization.py  communication.py  payment.py
p/teacher/: activity.py  authorization.py  communication.py
pages/: auth.py  welcome.py
